--- a/src/index.scss
+++ b/src/index.scss
@@ -1,1 +1,92 @@
 @import '~bootstrap/scss/bootstrap';
+
+.parallax {
+  height: 100%;
+  background-attachment: fixed;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
+.masthead {
+  padding-top: calc(6rem + 74px);
+  padding-bottom: 6rem;
+  background-image: url('./components/images/craftdistillery.jpg');
+  box-shadow: inset 0 0 4em 4em #000000;
+}
+.masthead .masthead-heading {
+  font-family: Georgia, serif;
+  font-size: 40px;
+  letter-spacing: 2px;
+  word-spacing: 2px;
+  color: #E9B122;
+  font-variant: small-caps;
+}
+.masthead .masthead-subheading {
+  font-size: 1.25rem;
+}
+
+@media (min-width: 992px) {
+  .masthead {
+    padding-top: calc(2rem + 104px);
+    padding-bottom: 6rem;
+  }
+  .masthead .masthead-heading {
+    font-size: 8rem;
+    line-height: 6.5rem;
+  }
+  .masthead .masthead-subheading {
+    font-size: 1.5rem;
+  }
+}
+
+.page-section {
+  padding: 6rem 0;
+}
+.page-section .page-section-heading {
+  font-size: 2.0rem;
+  line-height: 1.5rem;
+}
+@media (min-width: 992px) {
+  .page-section .page-section-heading {
+    font-family: Georgia, serif;
+    font-size: 40px;
+    letter-spacing: 2px;
+    word-spacing: 2px;
+    color: #FFE6C6;
+    font-variant: small-caps;
+  }
+}
+
+.about {
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: right;
+  background-image: url('./components/images/wine.jpg');
+  box-shadow: inset 0 0 1em 4em #000000;
+  opacity: .95
+}
+
+.connections {
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: right;
+  background-image: url('./components/images/countryside.jpg');
+  box-shadow: inset 0 0 4em 5em #000000;
+  opacity: .95
+}
+
+.lead {
+  color: #FFE6C6;
+}
+
+.footer {
+  padding-top: 2rem;
+  padding-bottom: 2rem;
+  background-color: #000000;
+  color: #fff;
+}
+
+.copyright {
+  background-color: #1a252f;
+}
