--- a/src/index.scss
+++ b/src/index.scss
@@ -1,5 +1,10 @@
 @import '~bootstrap/scss/bootstrap';
 
+.center {
+  display: flex;
+  justify-content: center;
+}
+
 .parallax {
   height: 100%;
   background-attachment: fixed;
@@ -11,7 +16,7 @@
 .masthead {
   padding-top: calc(6rem + 74px);
   padding-bottom: 6rem;
-  background-image: url('./images/craftdistillery.jpg');
+  background-image: url('./images/barrels.jpg');
   box-shadow: inset 0 0 4em 4em #000000;
 }
 
@@ -54,7 +59,7 @@
   background-repeat: no-repeat;
   background-size: cover;
   background-position: right;
-  background-image: url('./images/wine.jpg');
+  background-image: url('./images/craft.jpg');
   box-shadow: inset 0 0 1em 4em #000000;
   opacity: .95
 }
@@ -68,9 +73,28 @@
   opacity: .95
 }
 
-.lead {
+.lead1 {
   color: #FFE6C6;
-  margin: 10%;
+  margin-left: 34%;
+  margin-right: 34%;
+}
+
+.lead2 {
+  color: #FFE6C6;
+  margin-left: 36%;
+  margin-right: 36%;
+}
+
+.lead3 {
+  color: #FFE6C6;
+  margin-left: 38%;
+  margin-right: 38%;
+}
+
+.lead4 {
+  color: #FFE6C6;
+  margin-left: 40%;
+  margin-right: 40%;
 }
 
 .footer {
@@ -111,24 +135,16 @@
   position:absolute;
 }
 
-.california {
-  top: 32%;
-  left: 10%;
-}
+.france { top: 25%; left: 48%; }
+.portugal { top: 30%; left: 44%; }
+.italy { top: 29%; left: 53%; }
+.germany { top: 23%; left: 52%; }
+.chile { top: 72%; left: 21%; }
+.argentina { top: 71%; left: 23%; }
 
-.france {
-  top: 25%;
-  left: 50%;
-}
-
-.italy {
-  top: 29%;
-  left: 53%;
-}
-
-.center {
-  display: flex;
-  justify-content: center;
+.vineyard {
+  width: 100%;
+  margin: auto;
 }
 
 .bottle {
@@ -136,6 +152,81 @@
   display: flex;
   margin: auto;
   padding-bottom: 1rem;
+}
+
+.sebutal {
+  width: 40.5%;
+  display: flex;
+  margin: auto;
+  padding-bottom: 1rem;
+}
+
+.fonte-real {
+  width: 47%;
+  display: flex;
+  margin: auto;
+  padding-bottom: 1rem;
+}
+
+.fonte-real-white {
+  width: 45%;
+  display: flex;
+  margin: auto;
+  padding-bottom: 1rem;
+}
+
+.bordeax {
+  width: 90%;
+  display: flex;
+  margin: auto;
+  padding-bottom: 1rem;
+  padding-left: 1rem;
+}
+
+.bodega-cab {
+  width: 94%;
+  display: flex;
+  margin: auto;
+  padding-bottom: 1rem;
+  padding-left: 1rem;
+}
+
+.bodega-malb {
+  width: 100%;
+  display: flex;
+  margin: auto;
+  padding-bottom: 1rem;
+  padding-left: 1rem;
+}
+
+.centered {
+  text-align: center;
+}
+
+.vanzeller-logo {
+  display: block;
+  margin-left: auto;
+  width: 45%;
+}
+
+.star-logo {
+  display: block;
+  margin-left: auto;
+  width: 45%;
+}
+
+.bodega-logo {
+  display: block;
+  margin-left: auto;
+  width: 65%;
+}
+
+.chassenac-logo {
+  display: block;
+  margin-left: auto;
+  width: 75%;
+  padding-bottom: 1rem;
+  padding-top: 1rem;
 }
 
 @media (max-width: 550px) {
@@ -194,4 +285,21 @@
 
 .modal-text {
   margin-right: 50px;
+}
+
+/* Fade in */
+
+.fade-in {
+animation: fadeIn ease 1s;
+-webkit-animation: fadeIn ease 1s;
+}
+
+@keyframes fadeIn {
+0% {opacity:0;}
+100% {opacity:1;}
+}
+
+@-webkit-keyframes fadeIn {
+0% {opacity:0;}
+100% {opacity:1;}
 }
