--- a/src/index.scss
+++ b/src/index.scss
@@ -1,5 +1,10 @@
 @import '~bootstrap/scss/bootstrap';
 
+h4 {
+  font-family: Georgia, serif;
+  color: #FFE6C6;
+}
+
 .center {
   display: flex;
   justify-content: center;
