--- a/src/index.scss
+++ b/src/index.scss
@@ -5,6 +5,15 @@ h4 {
   color: #FFE6C6;
 }
 
+.centered {
+  text-align: center;
+}
+
+.craft-connections {
+  padding-bottom: 15rem;
+  width: 85%;
+}
+
 .center {
   display: flex;
   justify-content: center;
@@ -18,30 +27,10 @@ h4 {
   background-size: cover;
 }
 
-.masthead {
-  padding-top: calc(6rem + 74px);
-  padding-bottom: 6rem;
-  background-image: url('./images/countryside.jpg');
-  box-shadow: inset 0 0 4em 4em #000000;
-}
-
-.masthead .masthead-heading {
-  font-family: Georgia, serif;
-  font-size: 40px;
-  letter-spacing: 2px;
-  word-spacing: 2px;
-  color: #E9B122;
-  font-variant: small-caps;
-}
-
-@media (min-width: 992px) {
+@media (max-width: 992px) {
   .masthead {
-    padding-top: calc(2rem + 104px);
-    padding-bottom: 6rem;
-  }
-  .masthead .masthead-heading {
-    font-size: 8rem;
-    line-height: 6.5rem;
+    padding-top: 104px;
+    padding-bottom: 1rem;
   }
 }
 
@@ -116,6 +105,7 @@ h4 {
 @media (min-width: 550px) {
   .modal-body {
     display: flex;
+    text-align: center;
   }
 }
 
@@ -157,37 +147,81 @@ h4 {
   padding-bottom: 1rem;
 }
 
-.sebutal {
-  width: 40.5%;
-  display: flex;
+.star-logo {
+  display: block;
+  width: 65%;
   margin: auto;
+}
+
+.chassenac-logo {
+  display: block;
+  margin: auto;
+  width: 60%;
+  padding-bottom: 1rem;
+  padding-top: 1rem;
+}
+
+.vanzeller-logo {
+  display: block;
+  margin: auto;
+  width: 105%;
+  padding-right: 3rem;
+  padding-bottom: 2rem;
+}
+
+.bodega-logo {
+  display: block;
+  margin: auto;
+  width: 80%;
   padding-bottom: 1rem;
 }
 
-.fonte-real {
-  width: 47%;
-  display: flex;
-  margin: auto;
+.title {
   padding-bottom: 1rem;
+  padding-right: 2rem;
+  font-family: Georgia, serif
 }
 
-.fonte-real-white {
-  width: 45%;
-  display: flex;
-  margin: auto;
-  padding-bottom: 1rem;
+.silver {
+  width: 65%;
+  top: 5%;
+  left: 45%;
+  position:absolute;
 }
 
-.bordeax {
-  width: 90%;
+.mondon {
+  width: 61%;
   display: flex;
   margin: auto;
-  padding-bottom: 1rem;
-  padding-left: 1rem;
+}
+
+.pinasse {
+  width: 60%;
+  display: flex;
+  margin: auto;
+}
+
+.pericou {
+  width:59.3%;
+  display: flex;
+  margin: auto;
+}
+
+.parais {
+  width: 58.7%;
+  display: flex;
+  margin: auto;
+}
+
+.cognac {
+  width: 124.5%;
+  display: flex;
+  margin: auto;
+  padding-top: 2rem;
 }
 
 .bodega-cab {
-  width: 94%;
+  width: 80%;
   display: flex;
   margin: auto;
   padding-bottom: 1rem;
@@ -195,41 +229,45 @@ h4 {
 }
 
 .bodega-malb {
-  width: 100%;
+  width: 79.5%;
   display: flex;
   margin: auto;
   padding-bottom: 1rem;
   padding-left: 1rem;
 }
 
-.centered {
-  text-align: center;
+.douro {
+  width: 33%;
+  display: flex;
+  margin: auto;
 }
 
-.vanzeller-logo {
-  display: block;
-  margin-left: auto;
-  width: 45%;
-}
-
-.star-logo {
-  display: block;
-  margin-left: auto;
-  width: 45%;
-}
-
-.bodega-logo {
-  display: block;
-  margin-left: auto;
-  width: 65%;
-}
-
-.chassenac-logo {
-  display: block;
-  margin-left: auto;
-  width: 75%;
+.sebutal {
+  width: 28.5%;
+  display: flex;
+  margin: auto;
   padding-bottom: 1rem;
-  padding-top: 1rem;
+}
+
+.fonte-redBlend {
+  width: 33.2%;
+  display: flex;
+  margin: auto;
+  padding-bottom: 1rem;
+}
+
+.fonte-redSebutal {
+  width: 33.1%;
+  display: flex;
+  margin: auto;
+  padding-bottom: 1rem;
+}
+
+.fonte-whiteSebutal {
+  width: 31.3%;
+  display: flex;
+  margin: auto;
+  padding-bottom: 1rem;
 }
 
 @media (max-width: 550px) {
@@ -288,6 +326,7 @@ h4 {
 
 .modal-text {
   margin-right: 50px;
+  font-family: Georgia, serif
 }
 
 /* Fade in */
