--- a/src/index.scss
+++ b/src/index.scss
@@ -218,6 +218,10 @@ h4 {
   }
 }
 
+.grape:hover {
+  filter: invert(100%);
+}
+
 .grape {
   cursor: pointer;
   width: 1.5%;
@@ -266,12 +270,36 @@ h4 {
 }
 
 @media (max-width: 765px) {
-  .portugal { top: 33%; left: 59.5%; }
-  .france { top: 24.5%; left: 67.5%; }
-  .italy { top: 31.5%; left: 75.5%; }
-  .germany { top: 20%; left: 73%; }
-  .chile { top: 89%; left: 17%; }
-  .argentina { top: 91%; left: 22.5%; }
+  .portugal {
+    width: 2.5%;
+    top: 32.7%;
+    left: 60.6%;
+  }
+  .france {
+    width: 9.2%;
+    top: 23.15%;
+    left: 64%;
+  }
+  .italy {
+    width: 8%;
+    top: 27.65%;
+    left: 72%;
+  }
+  .germany {
+    width: 6.3%;
+    top: 19%;
+    left: 71.5%;
+   }
+  .chile {
+    width: 6.5%;
+    top: 85.2%;
+    left: 14.3%;
+   }
+  .argentina {
+    width: 14.2%;
+    top: 89.1%;
+    left: 15.5%;
+  }
 }
 
 .vineyard {
