--- a/src/index.scss
+++ b/src/index.scss
@@ -342,7 +342,7 @@ h4 {
 .bodega-logo {
   display: block;
   margin-left: 40%;
-  width: 50%;
+  width: 30%;
 }
 
 .bodega-mobile {
@@ -413,6 +413,7 @@ h4 {
 .argentine {
   top: 2%;
   padding-left: 2%;
+  height: 109%;
 }
 
 .malb {
